fix overflow in sidenav, to different browsers like webkit and gecko

--- a/webcomponents/sidenav/sidenav.style.scss
+++ b/webcomponents/sidenav/sidenav.style.scss
@@ -9,7 +9,8 @@ mn-sidenav:not(.mn-sidenav) {display: none}
   transform: translate3d(-100%, 0, 0);
   will-change: transform;
   border-radius: 0 !important;
-  overflow: overlay;
+  overflow: auto;
+  overflow-y: overlay;
   transition: transform .32s ease;
 
   &.visible {
